# comps

./: .gitignore  docker-compose.yml
backend/: Dockerfile  __init__.py  database.py  main.py  models.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1e52fa043ddd_.py  61dd885877e2_create_all_tables.py  6c98414cebc0_.py  92bd7f20e943_.py  93725d20f346_create_outher_tables.py  9f128497dfc3_.py  c33f264a4e51_create_outher_tables.py  f0b49d9b53fe_add_nested_sets.py
backend/auth/: router.py  schemas.py  security.py
backend/cart/: router.py  schemas.py
backend/categories/: router.py  schemas.py
backend/orders/: router.py  schemas.py
backend/products/: router.py  schemas.py
backend/reviews/: router.py  schemas.py
backend/suppliers/: router.py  schemas.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: axios.ts  users.ts
frontend/src/components/: Header.tsx
frontend/src/components/admin/: UsersList.tsx
frontend/src/pages/: AdminPage.tsx  CartPage.tsx  HomePage.tsx  LoginPage.tsx  OrdersPage.tsx  ProductsPage.tsx  RegisterPage.tsx
frontend/src/sections/: CategoryAdminSection.tsx  OrdersAdminSection.tsx  ProductAdminSection.tsx
frontend/src/stores/: cartStore.ts  categoryStore.ts  orderStore.ts  productStore.ts  userStore.ts
