[project]
name = "computer-store"
version = "0.1.0"
description = "Computer store backend"
authors = [
    {name = "Agasyan",email = "agasyan222@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.13.0,<2.0.0)",
    "asyncpg (>=0.29.0,<0.30.0)",
    "uvicorn[standard] (>=0.27.0,<0.28.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.6,<0.1.0)",
    "pydantic[email] (>=2.11.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
